--- a/UHSampleGame/UHSampleGame.csproj
+++ b/UHSampleGame/UHSampleGame.csproj
@@ -84,12 +84,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InputManagement\InputManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="ScreenManagement\Screen.cs" />
     <Compile Include="ScreenManagement\ScreenManager.cs" />
     <Compile Include="Screens\DummyTextScreen.cs" />
+    <Compile Include="Screens\ModelAndText.cs" />
+    <Compile Include="Screens\ModelScreen.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
