--- a/UHSampleGame/UHSampleGame.csproj
+++ b/UHSampleGame/UHSampleGame.csproj
@@ -89,6 +89,8 @@
     <Compile Include="CoreObjects\StaticModel.cs" />
     <Compile Include="InputManagement\InputManager.cs" />
     <Compile Include="CoreObjects\AnimatedModel.cs" />
+    <Compile Include="MenuSystem\MenuEntry.cs" />
+    <Compile Include="MenuSystem\MenuScreen.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
@@ -96,6 +98,7 @@
     <Compile Include="ScreenManagement\ScreenManager.cs" />
     <Compile Include="Screens\AnimatedModelScreen.cs" />
     <Compile Include="Screens\DummyTextScreen.cs" />
+    <Compile Include="Screens\MenuScreenTest.cs" />
     <Compile Include="Screens\ModelAndText.cs" />
     <Compile Include="Screens\ModelScreen.cs" />
   </ItemGroup>
