Fixed TileSystem bug

--- a/UHSampleGame/UHSampleGame.csproj
+++ b/UHSampleGame/UHSampleGame.csproj
@@ -89,9 +89,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CameraManagement\CameraManager.cs" />
+    <Compile Include="CoreObjects\AnimatedTileObject.cs" />
     <Compile Include="CoreObjects\GameObject.cs" />
+    <Compile Include="CoreObjects\IPathableObject.cs" />
+    <Compile Include="CoreObjects\ITileableObject.cs" />
     <Compile Include="CoreObjects\StaticModel.cs" />
     <Compile Include="CoreObjects\Towers\Tower.cs" />
+    <Compile Include="CoreObjects\Units\Unit.cs" />
     <Compile Include="InputManagement\InputManager.cs" />
     <Compile Include="CoreObjects\AnimatedModel.cs" />
     <Compile Include="MenuSystem\MenuEntry.cs" />
