--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@
 /UHSampleGame/obj/x86/Debug/UHSampleGame.exe
 /UHSampleGame/obj/x86/Debug/UHSampleGame.pdb
 /UHSampleGame/obj/x86/Debug/cachefile-896dab71-c352-4b97-a450-c5aeb00714f0-targetpath.txt
+*.sln
+*.suo
