Concept of team towers and units done

--- a/UHSampleGame/UHSampleGame.csproj
+++ b/UHSampleGame/UHSampleGame.csproj
@@ -128,9 +128,9 @@
     <Compile Include="CoreObjects\GameObject.cs" />
     <Compile Include="CoreObjects\StaticModel.cs" />
     <Compile Include="CoreObjects\StaticTileObject.cs" />
+    <Compile Include="CoreObjects\TeamableObject.cs" />
     <Compile Include="CoreObjects\Towers\Tower.cs" />
     <Compile Include="CoreObjects\Towers\TowerAGood.cs" />
-    <Compile Include="CoreObjects\Towers\TowerTest.cs" />
     <Compile Include="CoreObjects\Units\TestUnit.cs" />
     <Compile Include="CoreObjects\Units\Unit.cs" />
     <Compile Include="Events\GameEventArgs.cs" />
@@ -148,7 +148,6 @@
     <Compile Include="Screens\MenuScreenTest.cs" />
     <Compile Include="Screens\ModelScreen.cs" />
     <Compile Include="Screens\PlayScreen.cs" />
-    <Compile Include="Screens\TileTestScreen.cs" />
     <Compile Include="TileSystem\Tile.cs" />
     <Compile Include="TileSystem\TileMap.cs" />
   </ItemGroup>
