--- a/UHSampleGame/UHSampleGame.csproj
+++ b/UHSampleGame/UHSampleGame.csproj
@@ -128,7 +128,8 @@
     <Compile Include="CoreObjects\GameObject.cs" />
     <Compile Include="CoreObjects\StaticModel.cs" />
     <Compile Include="CoreObjects\StaticTileObject.cs" />
-    <Compile Include="CoreObjects\TeamableObject.cs" />
+    <Compile Include="CoreObjects\TeamableAnimatedObject.cs" />
+    <Compile Include="CoreObjects\TeamableStaticObject.cs" />
     <Compile Include="CoreObjects\Towers\Tower.cs" />
     <Compile Include="CoreObjects\Towers\TowerAGood.cs" />
     <Compile Include="CoreObjects\Units\TestUnit.cs" />
@@ -139,6 +140,9 @@
     <Compile Include="MenuSystem\MenuEntry.cs" />
     <Compile Include="MenuSystem\MenuScreen.cs" />
     <Compile Include="PathFinding\AStar.cs" />
+    <Compile Include="Player\AIPlayer.cs" />
+    <Compile Include="Player\HumanPlayer.cs" />
+    <Compile Include="Player\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
