--- a/UHSampleGame/UHSampleGame.csproj
+++ b/UHSampleGame/UHSampleGame.csproj
@@ -129,8 +129,10 @@
     <Compile Include="CoreObjects\TeamableStaticObject.cs" />
     <Compile Include="CoreObjects\Towers\Tower.cs" />
     <Compile Include="CoreObjects\Towers\TowerAGood.cs" />
+    <Compile Include="CoreObjects\Towers\TowerCollection.cs" />
     <Compile Include="CoreObjects\Units\TestUnit.cs" />
     <Compile Include="CoreObjects\Units\Unit.cs" />
+    <Compile Include="CoreObjects\Units\UnitCollection.cs" />
     <Compile Include="Debug\FPSCounter.cs" />
     <Compile Include="EnumHelper\EnumHelper.cs" />
     <Compile Include="Events\GameEventArgs.cs" />
