--- a/UHSampleGame/UHSampleGame XBOX.csproj
+++ b/UHSampleGame/UHSampleGame XBOX.csproj
@@ -70,52 +70,55 @@
     <Compile Include="CameraManagement\CameraManager.cs" />
     <Compile Include="CoreObjects\AnimatedTileObject.cs" />
     <Compile Include="CoreObjects\Base\Base.cs" />
-    <Compile Include="CoreObjects\Base\Base2.cs" />
-    <Compile Include="CoreObjects\Base\TestBase.cs" />
-    <Compile Include="CoreObjects\Base\TestBase2.cs" />
+    <Compile Include="CoreObjects\Base\BaseCollection.cs" />
     <Compile Include="CoreObjects\GameObject.cs" />
     <Compile Include="CoreObjects\StaticModel.cs" />
     <Compile Include="CoreObjects\StaticTileObject.cs" />
     <Compile Include="CoreObjects\TeamableAnimatedObject.cs" />
     <Compile Include="CoreObjects\TeamableStaticObject.cs" />
-    <Compile Include="CoreObjects\Towers\Tower.cs" />
-    <Compile Include="CoreObjects\Towers\Tower2.cs" />
+    <Compile Include="CoreObjects\Towers\Tower.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="CoreObjects\Towers\TowerAGood.cs" />
     <Compile Include="CoreObjects\Towers\TowerCollection.cs" />
-    <Compile Include="CoreObjects\Units\TestUnit.cs" />
-    <Compile Include="CoreObjects\Units\Unit.cs" />
-    <Compile Include="CoreObjects\Units\Unit2.cs" />
+    <Compile Include="CoreObjects\Units\Unit.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="CoreObjects\Units\UnitCollection.cs" />
     <Compile Include="Debug\DebugInfo.cs" />
     <Compile Include="EnumHelper\EnumHelper.cs" />
-    <Compile Include="Events\GameEventArgs.cs" />
-    <Compile Include="Events\GameEventArgs2.cs" />
+    <Compile Include="Events\GameEventArgs.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="InputManagement\InputManager.cs" />
     <Compile Include="CoreObjects\AnimatedModel.cs" />
-    <Compile Include="LevelManagement\Level.cs" />
-    <Compile Include="LevelManagement\Level2.cs" />
+    <Compile Include="LevelManagement\Level.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="LevelManagement\LevelManager.cs" />
-    <Compile Include="LevelManagement\LevelManager2.cs" />
     <Compile Include="MenuSystem\MenuEntry.cs" />
     <Compile Include="MenuSystem\MenuScreen.cs" />
-    <Compile Include="PathFinding\AStar.cs" />
-    <Compile Include="PathFinding\AStar2.cs" />
+    <Compile Include="PathFinding\AStar.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Player\AIPlayer.cs" />
     <Compile Include="Player\HumanPlayer.cs" />
-    <Compile Include="Player\Player.cs" />
-    <Compile Include="Player\Player2.cs" />
+    <Compile Include="Player\Player.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="ScreenManagement\Screen.cs" />
     <Compile Include="ScreenManagement\ScreenManager.cs" />
     <Compile Include="Screens\MenuScreenTest.cs" />
-    <Compile Include="Screens\PlayScreen.cs" />
-    <Compile Include="Screens\PlayScreen2.cs" />
+    <Compile Include="Screens\PlayScreen.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="TileSystem\Tile.cs" />
-    <Compile Include="TileSystem\Tile2.cs" />
-    <Compile Include="TileSystem\TileMap.cs" />
-    <Compile Include="TileSystem\TileMap2.cs" />
+    <Compile Include="TileSystem\TileMap.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
