--- a/UHSampleGame/UHSampleGame.csproj
+++ b/UHSampleGame/UHSampleGame.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Game1.cs" />
     <Compile Include="ScreenManagement\Screen.cs" />
     <Compile Include="ScreenManagement\ScreenManager.cs" />
+    <Compile Include="Screens\IntroScreen.cs" />
     <Compile Include="Screens\MenuScreenTest.cs" />
     <Compile Include="Screens\PlayScreen.cs" />
     <Compile Include="TileSystem\Tile.cs" />
