--- a/UHSampleGame/UHSampleGame XBOX.csproj
+++ b/UHSampleGame/UHSampleGame XBOX.csproj
@@ -101,6 +101,7 @@
     <Compile Include="PathFinding\AStar.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="PathFinding\AStar2.cs" />
     <Compile Include="Player\AIPlayer.cs" />
     <Compile Include="Player\HumanPlayer.cs" />
     <Compile Include="Player\Player.cs">
