--- a/UHSampleGame/UHSampleGame XBOX.csproj
+++ b/UHSampleGame/UHSampleGame XBOX.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Screens\IntroScreen.cs" />
     <Compile Include="Screens\LoadScreen.cs" />
     <Compile Include="Screens\MenuScreenTest.cs" />
+    <Compile Include="Screens\MultiplayerLobby.cs" />
     <Compile Include="Screens\PlayScreen.cs">
       <SubType>Code</SubType>
     </Compile>
