New Multiplayer Things

--- a/UHSampleGame/UHSampleGame.csproj
+++ b/UHSampleGame/UHSampleGame.csproj
@@ -146,6 +146,18 @@
     <Compile Include="Player\AIPlayer.cs" />
     <Compile Include="Player\HumanPlayer.cs" />
     <Compile Include="Player\Player.cs" />
+    <Compile Include="Player\PlayerCollection.cs" />
+    <Compile Include="ProjectileManagement\ParticleEmitter.cs" />
+    <Compile Include="ProjectileManagement\ParticleSettings.cs" />
+    <Compile Include="ProjectileManagement\ParticleSystem.cs" />
+    <Compile Include="ProjectileManagement\ParticleVertex.cs" />
+    <Compile Include="ProjectileManagement\Projectile.cs" />
+    <Compile Include="ProjectileManagement\ProjectileManager.cs" />
+    <Compile Include="ProjectileManagement\ParticleSystems\ExplosionParticleSystem.cs" />
+    <Compile Include="ProjectileManagement\ParticleSystems\ExplosionSmokeParticleSystem.cs" />
+    <Compile Include="ProjectileManagement\ParticleSystems\FireParticleSystem.cs" />
+    <Compile Include="ProjectileManagement\ParticleSystems\ProjectileTrailParticleSystem.cs" />
+    <Compile Include="ProjectileManagement\ParticleSystems\SmokePlumeParticleSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
