--- a/UHSampleGame/UHSampleGame.csproj
+++ b/UHSampleGame/UHSampleGame.csproj
@@ -128,6 +128,8 @@
     <Compile Include="CoreObjects\StaticTileObject.cs" />
     <Compile Include="CoreObjects\TeamableAnimatedObject.cs" />
     <Compile Include="CoreObjects\TeamableStaticObject.cs" />
+    <Compile Include="CoreObjects\Terrain Objects\TerrainObject.cs" />
+    <Compile Include="CoreObjects\Terrain Objects\TerrainObjectCollection.cs" />
     <Compile Include="CoreObjects\Towers\Tower.cs" />
     <Compile Include="CoreObjects\Towers\TowerAGood.cs" />
     <Compile Include="CoreObjects\Towers\TowerCollection.cs" />
